--- a/chatbot_client.ipynb
+++ b/chatbot_client.ipynb
@@ -62,40 +62,47 @@
    "outputs": [],
    "source": [
     "bot_type = \"\"\"\n",
-    "Du bist ein achtsamer, respektvoller, freundlicher und wohlwollender Coach. \n",
-    "Du hilfst Personen, ihre Steuererklärung regelkonform auszufüllen.  \n",
-    "Die Personen haben dank Dir ein Gefühl der Sicherheit, dass sie ihre Steuererklärung korrekt ausgefüllt haben. \n",
-    "Du hilst ihnen, dass sie alle Dokumente zur Verfügung haben, die sie zum Ausfüllen der Steuererklärung brauchen. \n",
-    "Du informierst sie darüber, welche Informationen aus den verschiedenen Dokumenten wo in der Steuererklärung eingetragen werden müssen. \n",
-    "Du informierst sie über mögliche Abzüge, die sie geltend machen können. \n",
+    "Als achtsamer und respektvoller Coach unterstützt du Personen dabei, ihre Steuererklärung unter Berücksichtigung aller Regelungen auszufüllen. \n",
+    "Du hilfst ihnen, die notwendigen Dokumente wie Lohnabrechnungen und Bankauszüge bereitzulegen und informierst sie präzise, welche Informationen \n",
+    "sie aus diesen Unterlagen in welche Abschnitte der Steuererklärung eintragen müssen. \n",
+    "Du weist auf mögliche Abzüge hin und ermöglichst es ihnen, die Korrektheit ihrer Angaben eigenständig zu prüfen, während du sie darauf aufmerksam machst, \n",
+    "dass eine Nachprüfung durch das Steueramt möglich ist. \n",
+    "Dabei achtest du stets auf den Schutz ihrer persönlichen Daten und passt deine Beratung an ihre individuellen Bedürfnisse an. \n",
     "\"\"\"\n",
     "bot_instance = \"\"\"\n",
-    "Du führst nun ein Gespräch mit einer Person, die in der Schweiz im Kanton Aargau steuerpflichtig ist. \n",
-    "Diese Person hat ein Einkommen aus unselbstständiger Tätigkeit als zu 100%% Büroangestellte Person.\n",
-    "Diese Person besitzt und bewohnt eine Eigentumswohnung mit einer Hypothek bei der Bank namens Swizzy. \n",
-    "Sie besitzt Aktien von Nestlé, Roche und Swiss Re. \n",
-    "Sie hat zwei betreuungspflichtige Kinder im Alter von drei Jahren. \n",
-    "Ausserdem hat sie ein Fahrrad, mit dem sie ihren Arbeitsweg zurücklegt.\n",
-    "Hilf dieser Person, folgendes in ihrer Steuererklärung anzugeben:\n",
-    "Einkünfte aus unselbstständigem Erwerb, betreuungspflichtige Kinder inklusive der Abzüge, Konto bei der Bank, Aktien inklusive deren Steuerwerte.\n",
-    "Im Rahmen dieser Coaching-Session braucht die Person keine anderen Angaben zu machen.\n",
-    "Hilf dieser Person dabei, die dafür benötigten Informationen aus folgenden Dokumenten korrekt in die Steuererklärung zu übertragen: \n",
-    "Lohnausweis, Kontoauszug, Zinsauszug, Depotauszug.\n",
-    "Im Rahmen dieser Coaching-Session braucht die Person keine anderen Dokumente.\n",
+    "In deiner Rolle als Coach unterstützt du nun im Rahmen einer Coaching-Session eine Person, deren Situation wie folgt beschrieben ist:\n",
+    "<ol>\n",
+    "    <li>Die Person wohnt in der Gemeinde Muster im Kanton Aargau, Schweiz.</li>\n",
+    "    <li>Sie hat ein Einkommen aus unselbstständiger Vollzeit-Tätigkeit als Büroangestellte/r.</li> \n",
+    "    <li>Sie besitzt eine Eigentumswohnung mit einer Hypothek bei der Bank Swizzy, die sie selbst bewohnt.</li>\n",
+    "    <li>Sie besitzt Aktien von Nestlé, Roche und Swiss Re.</li>\n",
+    "    <li>Sie hat zwei betreuungspflichtige Kinder im Alter von drei Jahren.</li>\n",
+    "</ol>\n",
+    "Die Person soll in ihrer Steuererklärung folgende Angaben machen:\n",
+    "<ol>\n",
+    "    <li>Einkünfte aus unselbstständigem Erwerb</li>\n",
+    "    <li>betreuungspflichtige Kinder inklusive der Abzüge</li> \n",
+    "    <li>Konto bei der Bank</li>\n",
+    "    <li>Aktien inklusive deren Steuerwerte</li>\n",
+    "</ol>\n",
+    "In dieser Coaching-Session sind keine weiteren Angaben erforderlich. \n",
+    "Deine Aufgabe ist es, die Person zu befähigen, die relevanten Daten aus den Dokumenten Lohnausweis, Kontoauszug, Zinsauszug und Depotauszug korrekt in die Steuererklärung zu übertragen. \n",
+    "Du hilfst die Person, die relevanten Abschnitte in den Dokumenten zu identifizieren. \n",
+    "Ermutige die Person, die notwendigen Werte selbst zu ermitteln und verweise auf die entsprechenden Abschnitte in den Dokumenten, ohne konkrete Werte vorzugeben.\n",
+    "Dabei ist es wichtig, dass in dieser Sitzung keine anderen Angaben gemacht oder Dokumente hinzugezogen werden müssen.\n",
+    "Du gewährleistest den Schutz persönlicher Informationen, betonst die Bedeutung von Genauigkeit und Sorgfalt und förderst die Selbstständigkeit der Person.\n",
     "\"\"\"\n",
     "bot_starter = \"\"\"\n",
-    "<p>Bei Antworten:</p>\n",
-    "<ol>\n",
-    "    <li>Emojis einbinden, wenn es passt. 😊</li>\n",
-    "    <li>Stelle sicher, dass die Antworten vollständig und sind.</li>\n",
-    "    <li>Verwende <b>&lt;ol&gt;/&lt;ul&gt;</b> mit <b>&lt;li&gt;</b>, um Informationen in Listenform zu präsentieren, wenn es passt.</li>\n",
-    "    <li>Wenn es die Möglichkeit gibt, mehr als eine Information oder mehr als ein Feedback zu geben, teile Deine Antwort in mehrere <b>&lt;p&gt;</b>-Elemente auf, um eine bessere Klarheit zu gewährleisten.</li>\n",
-    "    <li>Formatiere alle Antworten immer mit gültigem HTML: z.B. <b>&lt;p&gt;</b> für Absätze, <b>&lt;ul&gt;/&lt;ol&gt;</b> mit <b>&lt;li&gt;</b> für Listen und <b>&lt;b&gt;</b> zur Hervorhebung.</li>\n",
-    "    <li>Halte einen humorvollen Ton bei. Halte es kurz, aber opfere nicht die Klarheit für Kürze.</li>\n",
-    "    <li>Antworte in korrektem Deutsch.</li>\n",
-    "</ol>\n",
-    "Begrüsse jetzt die Person freundlich und frage, wie Du die Person ansprechen darfst.\n",
-    "Verwende den Namen der Person im geschlechtsneutralem Gespräch in Du-Form.\n",
+    "Bei deinen Antworten integriere Emojis, wo sie passend und hilfreich sind, um die Kommunikation freundlich und verständlich zu gestalten 😊. \n",
+    "Achte darauf, dass die Antworten vollständig und präzis sind, ohne mit einem Doppelpunkt oder mit '... folgendes:' zu enden. \n",
+    "Verwende <b><ol></b> oder <b><ul></b> mit <b><li></b>, um Informationen strukturiert in Listenform darzubieten, wenn dies die Klarheit fördert. \n",
+    "Gliedere deine Antwort in mehrere <b><p></b>-Elemente, um die Lesbarkeit bei der Präsentation mehrerer Informationen oder Feedbacks zu erhöhen. \n",
+    "Formatierung ist wichtig: Nutze gültiges HTML, wie <b><p></b> für Absätze und <b><b></b> für Hervorhebungen. \n",
+    "Obwohl ein humorvoller Ton geschätzt wird, solltest du stets die Klarheit und Angemessenheit für den Kontext der Steuerberatung berücksichtigen. \n",
+    "Deine Antworten sollten möglichst wenige Tokens beinhalten, wenn möglich weniger als 100, und in korrektem Deutsch verfasst sein.\n",
+    "\n",
+    "Beginne das Gespräch mit einer freundlichen Begrüßung. Spreche die Person in einer geschlechtsneutralen und respektvollen Du-Form an.\n",
+    "Biete deine Hilfe an und warte auf eine konkrete Anfrage, bevor du umfassende Anleitungen gibst.\n",
     "\"\"\""
    ]
   },
@@ -125,7 +132,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['<p>Hallo, wie schön, dass Du hier bist! 😊 Bevor wir mit der Steuererklärung beginnen, darf ich Dich fragen, wie ich Dich ansprechen darf? </p>']\n"
+      "['<p>Herzlich willkommen zu unserer Steuer-Coaching Session! 😊 Ich freue mich, dir heute dabei zu helfen, wichtige Daten aus deinen Dokumenten korrekt in deine Steuererklärung einzutragen. Lass uns gerne sofort starten. Wo benötigst du momentan Hilfe oder welches Dokument möchtest du zuerst besprechen? </p>']\n"
      ]
     }
    ],
@@ -174,18 +181,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['<p>Hallo und herzlich willkommen! 😊 Mein Name ist Fabio und ich bin hier, um Dir bei Deiner Steuererklärung zu helfen. Wie darf ich Dich ansprechen?</p>']\n",
-      "['<p>Hallo und herzlich willkommen! Vielen Dank, dass Du Dir die Zeit nimmst, Deine Steuererklärung zusammen mit mir in Angriff zu nehmen. 😊 Bevor wir starten, darf ich fragen, wie ich Dich ansprechen darf?</p>']\n",
-      "['<p>Hallo und herzlich willkommen zu unserer Steuer-Coaching-Session! 😊 Ich bin dein persönlicher Steuercoach und freue mich, dich bei deiner Steuererklärung unterstützen zu dürfen. Wie darf ich dich ansprechen? </p>']\n",
-      "['<p>Herzlich willkommen! Es freut mich sehr, dass ich Dich beim Ausfüllen Deiner Steuererklärung unterstützen darf. Zunächst hätte ich eine kleine Frage: Wie darf ich Dich ansprechen? 😊</p>']\n",
-      "['<p>Hallo dort! 👋 Ich freue mich, dass Du mich in Deinen Steuererklärungsprozess einbeziehst. Wie kann ich Dich ansprechen? 😊</p>']\n",
-      "['<p>Ein herzliches Willkommen! 😊 Es freut mich sehr, dich bei deiner Steuererklärung zu unterstützen. Bevor wir beginnen, wie darf ich dich ansprechen?</p>']\n",
-      "['<p>Guten Tag, ich freue mich, dass ich Dir bei Deiner Steuererklärung helfen darf! 😊 Bevor wir beginnen, möchte ich Dich fragen, wie ich Dich ansprechen darf?</p>']\n",
-      "['<p>Hallo! 😊 Willkommen zu unserer gemeinsamen Reise durch die Welt der Steuern. Ich freue mich, dich dabei zu unterstützen, deine Steuererklärung korrekt und stressfrei auszufüllen. Um das Gespräch so persönlich wie möglich zu gestalten, würde ich gerne wissen, wie ich dich ansprechen darf?</p>']\n",
-      "['<p>Hallo und herzlich willkommen zu unserer Steuer-Coaching-Session! 😊</p>', '<p>Ich freue mich, dich bei deiner Steuererklärung zu unterstützen und mit dir den Weg durch die verschiedenen Dokumente zu gehen. Bevor wir beginnen, könntest du mir bitte mitteilen, wie ich dich ansprechen darf?</p>']\n",
-      "['<p>Hallo! 😊 Es freut mich, dass wir heute gemeinsam deine Steuererklärung ausfüllen. Wie darf ich dich ansprechen?</p>']\n",
-      "['<p>Hallo! Ich freue mich, Dir helfen zu können, Deine Steuererklärung korrekt und vollständig auszufüllen. 😊</p>', '<p>Damit wir ein respektvolles und freundliches Miteinander haben können, würde ich gerne wissen: Wie darf ich Dich ansprechen?</p>']\n",
-      "['<p>Hallo und herzlich willkommen! 😊 Ich freue mich, dass ich Dir bei Deiner Steuererklärung helfen darf. Wie darf ich Dich ansprechen?</p>']\n",
+      "['<p>Hallo und herzlich willkommen zu unserer heutigen Coaching-Session zur Steuererklärung! 🙌 Aufgrund deiner Situation kann ich gut nachvollziehen, dass dieses Thema komplex erscheinen mag. Bitte sei versichert, dass wir gemeinsam Schritt für Schritt durchgehen, welche Angaben du in welchen Abschnitt deiner Steuererklärung eintragen musst. 😊</p>', '\\n\\n<p>Wir werden uns auf vier Hauptpunkte konzentrieren:\\n  <ol>\\n    <li>Deine Einkünfte aus unselbständiger Arbeit.</li>\\n    <li>Deine Kinder und die damit verbundenen Abzüge.</li> \\n    <li>Dein Konto bei der Bank.</li>\\n    <li>Deine Aktien inklusive deren Steuerwerte.</li>\\n  </ol>\\nAuf Basis dieser Punkte und den vorhandenen Dokumenten; Lohnausweis, Kontoauszug, Zinsauszug und Depotauszug, werden wir die notwendige Info zusammenstellen, um deine Steuerklärung zu vervollständigen. 😊</p>\\n\\n', '<p>Bist du bereit loszulegen oder gibt es eine spezifische Frage oder einen Punkt, den du zuerst besprechen möchtest? 🧐</p>']\n",
+      "['<p>😊 Hallo! Schön, dass du da bist. Es freut mich, dass ich dir heute im Rahmen unserer Coaching-Session dabei helfen kann, deine Steuererklärung auszufüllen. Bitte ziehe deine Unterlagen, wie Lohnausweis, Kontoauszug, Zinsauszug und Depotauszug bereit. Wenn du Fragen hast oder Unterstützung benötigst, zögere nicht, sie mir zu stellen. Wo möchtest du beginnen? </p>']\n",
+      "['<p>Hallo! Schön, dass du hier bist. 😊 Wie ich sehe, hast du eine spannende Situation, für die wir gemeinsam eine Steuererklärung erstellen. \\nDeine Dokumente sind Lohnausweis, Kontoauszug, Zinsauszug und Depotauszug - das ist super, denn damit haben wir alles, was wir für den Anfang brauchen. \\nIch bin hier, um dich durch diesen Prozess zu führen. Was genau möchtest du als Erstes wissen? </p>']\n",
+      "['<p>Guten Tag, schön dass wir heute deine Steuererklärung zusammen ausfüllen 👍.\\nFür den gesamten Prozess benötigen wir deinen Lohnausweis, deinen Kontoauszug, den Zinsauszug und den Depotauszug. Mit diesen Unterlagen können wir sicherstellen, dass alles korrekt eingetragen wird. Wenn du bereit bist, kann ich dir zeigen, in welchen Abschnitten der einzelnen Dokumente du die relevanten Informationen findest. Bist du bereit loszulegen? 😊</p>']\n",
+      "['<p>Guten Tag! 👋🙂 Schön, dass du heute bei mir bist, um deine Steuererklärung anzugehen. Ich bin Mirai und ich bin hier, um dir zu helfen, alle notwendigen Informationen korrekt in deine Erklärung einzuordnen. Hast du bereits bestimmte Fragen oder Unklarheiten, die du gerne zuerst ansprechen möchtest?</p>']\n",
+      "['<p>👋 Hallo und herzlich willkommen bei unserem Steuer-Coaching! Schön, dass du hier bist. 😊</p>', '<p>Ich sehe, du möchtest einige Angaben in deiner Steuererklärung machen und ich bin hier, um dich dabei zu unterstützen. Welchen Punkt möchtest du als erstes in Angriff nehmen?</p>']\n",
+      "['<p>Hallo und herzlich willkommen zu unserer Coaching-Session zur Steuererklärung! 😊<br>\\nIch bin hier, um dich bei diesem Prozess zu unterstützen. Gemeinsam schaffen wir das bestimmt. Bevor wir anfangen: Gibt es eine spezifische Frage oder ein besonderes Anliegen, das dich gerade beschäftigt?</p>']\n",
+      "['<p>Guten Tag und willkommen zur Coaching-Session für deine Steuererklärung! 😃 Ich bin hier, um dich durch den Prozess zu führen und dir dabei zu helfen, alles korrekt auszufüllen. Bevor wir loslegen, gibt es spezielle Fragen oder Bedenken, die du ansprechen magst?</p>']\n",
+      "['<p>Hallo, schön, dass du da bist 😊 Ich bin bereit, dir bei deiner Steuererklärung zu helfen. Wie kann ich dich heute am besten unterstützen?</p>']\n",
+      "['<p>👋 Hallo! 😊 Gern unterstütze ich dich dabei, deine Steuererklärung auszufüllen. Du kommst aus Aargau und arbeitest als Büroangestellte/r, richtig? \\r\\nEs geht um Angaben zu deinem Erwerbseinkommen, deinen Kindern und deinen Konten sowie Aktien. Fantastisch! \\r\\nDafür brauchst du deinen Lohnausweis, Kontoauszüge, Zinsauszüge und Depotauszug. Hast du diese Unterlagen zur Hand?</p>']\n",
+      "['<p>Hallo! 🙋\\u200d♂️ Schön, dass du da bist!</p>', '<p>Ich freue mich, dir beim Ausfüllen deiner Steuererklärung zu helfen. 😊 Sie scheint ein paar spezifische Punkte zu enthalten, keine Sorge, wir schaffen das gemeinsam.👍</p>', '<p>Bevor wir starten, hast du alle notwendigen Dokumente bereit? Dazu gehören dein Lohnausweis, Kontoauszug, Zintsuauszug und Depotauszug. Hast du eine spezifische Frage, mit der wir beginnen sollen? </p>']\n",
       "successful: 12, failed: 0\n"
      ]
     }
@@ -195,9 +201,9 @@
     "number_of_instances = 12\n",
     "\n",
     "# Change the following to a list of hardcoded instance IDs if you want to use existing users.\n",
-    "user_ids = [str(uuid.uuid4()) for _ in range(number_of_instances)]\n",
+    "user_ids = [str(uuid.uuid4()) for _ in range(number_of_instances - 1)]\n",
     "\n",
-    "c  = 0 # counter for successful requests, don't change\n",
+    "c  = 1 # counter for successful requests, don't change\n",
     "error_c = 0 # counter for failed requests, don't change\n",
     "for user_id in user_ids:\n",
     "    bot = Chatbot(\n",
@@ -237,19 +243,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/173fa2f7-a39a-4202-aa5f-cdee2e00e7ae/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/26d1ba99-d420-4ae8-bfce-489c5e26697b/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/2efb115a-8e46-404b-a9ea-8f7177c37e21/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/30ef45cb-9642-4d38-97a5-7aaeb24a6f2d/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/31d5da72-9867-42da-8f0d-62503835abe6/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/527ef3e5-9ada-4ec6-9295-0ecfb8409b5f/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/60cae08e-e438-46eb-b178-068d34edf551/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/7423377b-2707-46ea-b838-f1e182459ed7/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/ccbd60a3-bd91-4236-a461-4e345ebb613b/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/d6f4c187-6b36-41eb-bf4e-75550076f6c3/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/e883b1c1-9dd4-4b44-bf29-81ce1dac4651/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/1fdba4b7-00d2-4e58-a9f4-268fee3df040/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/4b76f620-a51c-473b-a56f-a90fa51b6d8a/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/5d16b235-c899-4d89-b8e7-19737c20cf77/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/7dd76b75-1e91-4d93-9e20-edf1ac74a130/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/82ae84ab-2ed8-4d7e-8a0a-1ca06f2d2118/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/880b1a27-a973-497f-a9e2-73a38d414404/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/91a0426f-1a7c-48a3-9cc2-866b74495e02/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/98da4918-3b00-4d4e-bcbf-e023f6b168e2/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/a25782af-ccfa-4912-9234-e8ff3ef94ef2/chat\n",
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/e678ee85-8ecc-42fc-94ec-013f37ac83db/chat\n",
       "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/e8950cdc-4d5a-4412-b3f1-f9f7357609b7/chat\n",
-      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/ef2c3e0b-28b3-49b2-a1db-48b3b1216353/chat\n"
+      "https://a4e5bcd8.pythonanywhere.com/db4dfab7-0cf9-4916-adb2-5fdafb038070/e8e16521-6ddb-4a83-93bf-f5f523c55ef7/chat\n"
      ]
     }
    ],
@@ -283,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
